# cc_compare

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflow/: build.yml  build_all.yml
.github/workflows/: build.yml
ci/: build.sh  setup_gbench.sh
scripts/: build.sh
src/: bench.cpp  gbench_main.cpp  lib.cpp  main.cpp  test.cpp  test.hpp
